@@ -116,7 +116,9 @@ LIBS += ../../common/libcross.a
 
 RESOURCES += cre.qrc
 
-CONFIG -= precompile_header
+CONFIG += precompile_header
 CONFIG += thread
+
+PRECOMPILED_HEADER = cre_pch.h
 
 QT += script
