@@ -1,0 +1,29 @@
+#ifndef _CRE_PCH_H
+#define	_CRE_PCH_H
+
+#ifdef	__cplusplus
+extern "C" {
+#endif
+
+#include "global.h"
+#include "artifact.h"
+#include "face.h"
+#include "image.h"
+#include "map.h"
+#include "object.h"
+#include "treasure.h"
+
+#ifdef	__cplusplus
+}
+#endif
+
+#include <QObject>
+#include <Qt>
+#include <QWidget>
+#include <QtGui>
+#include <QList>
+#include <QHash>
+#include <QStringList>
+
+
+#endif	/* _CRE_PCH_H */
