@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Speed up compilation with precompiled headers.
+Nicolas Weeger 2010-05-22
+
 Reply edition panel.
 Nicolas Weeger 2010-05-22
 
